parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    PLUS
    MINUS
    TIMES
    DIVIDE
    MOD
    PUNTOYCOMA
    ESIGUAL
    DIFERENTE
    IF
    THEN
    ELSE
    WHILE
    FUN
    SIZE
    OR
    AND

Grammar

Rule 0     S' -> todo
Rule 1     todo -> lista
Rule 2     todo -> variable
Rule 3     todo -> conjunto
Rule 4     todo -> pair
Rule 5     lista -> ListaConTipo
Rule 6     lista -> ListaSinTipo
Rule 7     variable -> variableConTipo
Rule 8     variable -> variableSinTipo
Rule 9     conjunto -> ConjuntoConTipo
Rule 10    conjunto -> ConjuntoSinTipo
Rule 11    variableConTipo -> valovar VARIABLE DOSPUNTOS STRING IGUAL STRINGPALABRA
Rule 12    variableConTipo -> valovar VARIABLE DOSPUNTOS INT IGUAL NUMBER
Rule 13    variableConTipo -> valovar VARIABLE DOSPUNTOS BOOLEAN IGUAL
Rule 14    variableSinTipo -> valovar VARIABLE IGUAL datosprimitivos
Rule 15    ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST MENORQUE INT MAYORQUE IGUAL LISTOF LPAREN repeInt RPAREN
Rule 16    ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST MENORQUE STRING MAYORQUE IGUAL LISTOF LPAREN repeString RPAREN
Rule 17    ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST MENORQUE BOOLEAN MAYORQUE IGUAL LISTOF LPAREN RPAREN
Rule 18    ListaSinTipo -> valovar VARIABLE IGUAL LISTOF LPAREN repeCualquier RPAREN
Rule 19    ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET MENORQUE INT MAYORQUE IGUAL SETOF LPAREN repeInt RPAREN
Rule 20    ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET MENORQUE STRING MAYORQUE IGUAL SETOF LPAREN repeString RPAREN
Rule 21    ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET MENORQUE BOOLEAN MAYORQUE IGUAL SETOF LPAREN RPAREN
Rule 22    ConjuntoSinTipo -> valovar VARIABLE IGUAL SETOF LPAREN repeCualquier RPAREN
Rule 23    pair -> valovar VARIABLE IGUAL PAIR LPAREN datosprimitivos COMA datosprimitivos RPAREN
Rule 24    datosprimitivos -> NUMBER
Rule 25    datosprimitivos -> STRINGPALABRA
Rule 26    datosprimitivos -> VARIABLE
Rule 27    valovar -> VAR
Rule 28    valovar -> VAL
Rule 29    repeInt -> valor
Rule 30    repeInt -> valor COMA repeInt
Rule 31    valor -> NUMBER
Rule 32    valor -> VARIABLE
Rule 33    repeString -> String
Rule 34    repeString -> String COMA repeString
Rule 35    String -> STRINGPALABRA
Rule 36    String -> VARIABLE
Rule 37    repeCualquier -> datosprimitivos
Rule 38    repeCualquier -> datosprimitivos COMA repeCualquier

Terminals, with rules where they appear

AND                  : 
BOOLEAN              : 13 17 21
COMA                 : 23 30 34 38
DIFERENTE            : 
DIVIDE               : 
DOSPUNTOS            : 11 12 13 15 16 17 19 20 21
ELSE                 : 
ESIGUAL              : 
FUN                  : 
IF                   : 
IGUAL                : 11 12 13 14 15 16 17 18 19 20 21 22 23
INT                  : 12 15 19
LIST                 : 15 16 17
LISTOF               : 15 16 17 18
LPAREN               : 15 16 17 18 19 20 21 22 23
MAYORQUE             : 15 16 17 19 20 21
MENORQUE             : 15 16 17 19 20 21
MINUS                : 
MOD                  : 
NUMBER               : 12 24 31
OR                   : 
PAIR                 : 23
PLUS                 : 
PUNTOYCOMA           : 
RPAREN               : 15 16 17 18 19 20 21 22 23
SET                  : 19 20 21
SETOF                : 19 20 21 22
SIZE                 : 
STRING               : 11 16 20
STRINGPALABRA        : 11 25 35
THEN                 : 
TIMES                : 
VAL                  : 28
VAR                  : 27
VARIABLE             : 11 12 13 14 15 16 17 18 19 20 21 22 23 26 32 36
WHILE                : 
error                : 

Nonterminals, with rules where they appear

ConjuntoConTipo      : 9
ConjuntoSinTipo      : 10
ListaConTipo         : 5
ListaSinTipo         : 6
String               : 33 34
conjunto             : 3
datosprimitivos      : 14 23 23 37 38
lista                : 1
pair                 : 4
repeCualquier        : 18 22 38
repeInt              : 15 19 30
repeString           : 16 20 34
todo                 : 0
valor                : 29 30
valovar              : 11 12 13 14 15 16 17 18 19 20 21 22 23
variable             : 2
variableConTipo      : 7
variableSinTipo      : 8

Parsing method: LALR

state 0

    (0) S' -> . todo
    (1) todo -> . lista
    (2) todo -> . variable
    (3) todo -> . conjunto
    (4) todo -> . pair
    (5) lista -> . ListaConTipo
    (6) lista -> . ListaSinTipo
    (7) variable -> . variableConTipo
    (8) variable -> . variableSinTipo
    (9) conjunto -> . ConjuntoConTipo
    (10) conjunto -> . ConjuntoSinTipo
    (23) pair -> . valovar VARIABLE IGUAL PAIR LPAREN datosprimitivos COMA datosprimitivos RPAREN
    (15) ListaConTipo -> . valovar VARIABLE DOSPUNTOS LIST MENORQUE INT MAYORQUE IGUAL LISTOF LPAREN repeInt RPAREN
    (16) ListaConTipo -> . valovar VARIABLE DOSPUNTOS LIST MENORQUE STRING MAYORQUE IGUAL LISTOF LPAREN repeString RPAREN
    (17) ListaConTipo -> . valovar VARIABLE DOSPUNTOS LIST MENORQUE BOOLEAN MAYORQUE IGUAL LISTOF LPAREN RPAREN
    (18) ListaSinTipo -> . valovar VARIABLE IGUAL LISTOF LPAREN repeCualquier RPAREN
    (11) variableConTipo -> . valovar VARIABLE DOSPUNTOS STRING IGUAL STRINGPALABRA
    (12) variableConTipo -> . valovar VARIABLE DOSPUNTOS INT IGUAL NUMBER
    (13) variableConTipo -> . valovar VARIABLE DOSPUNTOS BOOLEAN IGUAL
    (14) variableSinTipo -> . valovar VARIABLE IGUAL datosprimitivos
    (19) ConjuntoConTipo -> . valovar VARIABLE DOSPUNTOS SET MENORQUE INT MAYORQUE IGUAL SETOF LPAREN repeInt RPAREN
    (20) ConjuntoConTipo -> . valovar VARIABLE DOSPUNTOS SET MENORQUE STRING MAYORQUE IGUAL SETOF LPAREN repeString RPAREN
    (21) ConjuntoConTipo -> . valovar VARIABLE DOSPUNTOS SET MENORQUE BOOLEAN MAYORQUE IGUAL SETOF LPAREN RPAREN
    (22) ConjuntoSinTipo -> . valovar VARIABLE IGUAL SETOF LPAREN repeCualquier RPAREN
    (27) valovar -> . VAR
    (28) valovar -> . VAL

    VAR             shift and go to state 13
    VAL             shift and go to state 14

    todo                           shift and go to state 1
    lista                          shift and go to state 2
    variable                       shift and go to state 3
    conjunto                       shift and go to state 4
    pair                           shift and go to state 5
    ListaConTipo                   shift and go to state 6
    ListaSinTipo                   shift and go to state 7
    variableConTipo                shift and go to state 8
    variableSinTipo                shift and go to state 9
    ConjuntoConTipo                shift and go to state 10
    ConjuntoSinTipo                shift and go to state 11
    valovar                        shift and go to state 12

state 1

    (0) S' -> todo .



state 2

    (1) todo -> lista .

    $end            reduce using rule 1 (todo -> lista .)


state 3

    (2) todo -> variable .

    $end            reduce using rule 2 (todo -> variable .)


state 4

    (3) todo -> conjunto .

    $end            reduce using rule 3 (todo -> conjunto .)


state 5

    (4) todo -> pair .

    $end            reduce using rule 4 (todo -> pair .)


state 6

    (5) lista -> ListaConTipo .

    $end            reduce using rule 5 (lista -> ListaConTipo .)


state 7

    (6) lista -> ListaSinTipo .

    $end            reduce using rule 6 (lista -> ListaSinTipo .)


state 8

    (7) variable -> variableConTipo .

    $end            reduce using rule 7 (variable -> variableConTipo .)


state 9

    (8) variable -> variableSinTipo .

    $end            reduce using rule 8 (variable -> variableSinTipo .)


state 10

    (9) conjunto -> ConjuntoConTipo .

    $end            reduce using rule 9 (conjunto -> ConjuntoConTipo .)


state 11

    (10) conjunto -> ConjuntoSinTipo .

    $end            reduce using rule 10 (conjunto -> ConjuntoSinTipo .)


state 12

    (23) pair -> valovar . VARIABLE IGUAL PAIR LPAREN datosprimitivos COMA datosprimitivos RPAREN
    (15) ListaConTipo -> valovar . VARIABLE DOSPUNTOS LIST MENORQUE INT MAYORQUE IGUAL LISTOF LPAREN repeInt RPAREN
    (16) ListaConTipo -> valovar . VARIABLE DOSPUNTOS LIST MENORQUE STRING MAYORQUE IGUAL LISTOF LPAREN repeString RPAREN
    (17) ListaConTipo -> valovar . VARIABLE DOSPUNTOS LIST MENORQUE BOOLEAN MAYORQUE IGUAL LISTOF LPAREN RPAREN
    (18) ListaSinTipo -> valovar . VARIABLE IGUAL LISTOF LPAREN repeCualquier RPAREN
    (11) variableConTipo -> valovar . VARIABLE DOSPUNTOS STRING IGUAL STRINGPALABRA
    (12) variableConTipo -> valovar . VARIABLE DOSPUNTOS INT IGUAL NUMBER
    (13) variableConTipo -> valovar . VARIABLE DOSPUNTOS BOOLEAN IGUAL
    (14) variableSinTipo -> valovar . VARIABLE IGUAL datosprimitivos
    (19) ConjuntoConTipo -> valovar . VARIABLE DOSPUNTOS SET MENORQUE INT MAYORQUE IGUAL SETOF LPAREN repeInt RPAREN
    (20) ConjuntoConTipo -> valovar . VARIABLE DOSPUNTOS SET MENORQUE STRING MAYORQUE IGUAL SETOF LPAREN repeString RPAREN
    (21) ConjuntoConTipo -> valovar . VARIABLE DOSPUNTOS SET MENORQUE BOOLEAN MAYORQUE IGUAL SETOF LPAREN RPAREN
    (22) ConjuntoSinTipo -> valovar . VARIABLE IGUAL SETOF LPAREN repeCualquier RPAREN

    VARIABLE        shift and go to state 15


state 13

    (27) valovar -> VAR .

    VARIABLE        reduce using rule 27 (valovar -> VAR .)


state 14

    (28) valovar -> VAL .

    VARIABLE        reduce using rule 28 (valovar -> VAL .)


state 15

    (23) pair -> valovar VARIABLE . IGUAL PAIR LPAREN datosprimitivos COMA datosprimitivos RPAREN
    (15) ListaConTipo -> valovar VARIABLE . DOSPUNTOS LIST MENORQUE INT MAYORQUE IGUAL LISTOF LPAREN repeInt RPAREN
    (16) ListaConTipo -> valovar VARIABLE . DOSPUNTOS LIST MENORQUE STRING MAYORQUE IGUAL LISTOF LPAREN repeString RPAREN
    (17) ListaConTipo -> valovar VARIABLE . DOSPUNTOS LIST MENORQUE BOOLEAN MAYORQUE IGUAL LISTOF LPAREN RPAREN
    (18) ListaSinTipo -> valovar VARIABLE . IGUAL LISTOF LPAREN repeCualquier RPAREN
    (11) variableConTipo -> valovar VARIABLE . DOSPUNTOS STRING IGUAL STRINGPALABRA
    (12) variableConTipo -> valovar VARIABLE . DOSPUNTOS INT IGUAL NUMBER
    (13) variableConTipo -> valovar VARIABLE . DOSPUNTOS BOOLEAN IGUAL
    (14) variableSinTipo -> valovar VARIABLE . IGUAL datosprimitivos
    (19) ConjuntoConTipo -> valovar VARIABLE . DOSPUNTOS SET MENORQUE INT MAYORQUE IGUAL SETOF LPAREN repeInt RPAREN
    (20) ConjuntoConTipo -> valovar VARIABLE . DOSPUNTOS SET MENORQUE STRING MAYORQUE IGUAL SETOF LPAREN repeString RPAREN
    (21) ConjuntoConTipo -> valovar VARIABLE . DOSPUNTOS SET MENORQUE BOOLEAN MAYORQUE IGUAL SETOF LPAREN RPAREN
    (22) ConjuntoSinTipo -> valovar VARIABLE . IGUAL SETOF LPAREN repeCualquier RPAREN

    IGUAL           shift and go to state 16
    DOSPUNTOS       shift and go to state 17


state 16

    (23) pair -> valovar VARIABLE IGUAL . PAIR LPAREN datosprimitivos COMA datosprimitivos RPAREN
    (18) ListaSinTipo -> valovar VARIABLE IGUAL . LISTOF LPAREN repeCualquier RPAREN
    (14) variableSinTipo -> valovar VARIABLE IGUAL . datosprimitivos
    (22) ConjuntoSinTipo -> valovar VARIABLE IGUAL . SETOF LPAREN repeCualquier RPAREN
    (24) datosprimitivos -> . NUMBER
    (25) datosprimitivos -> . STRINGPALABRA
    (26) datosprimitivos -> . VARIABLE

    PAIR            shift and go to state 19
    LISTOF          shift and go to state 21
    SETOF           shift and go to state 22
    NUMBER          shift and go to state 23
    STRINGPALABRA   shift and go to state 24
    VARIABLE        shift and go to state 18

    datosprimitivos                shift and go to state 20

state 17

    (15) ListaConTipo -> valovar VARIABLE DOSPUNTOS . LIST MENORQUE INT MAYORQUE IGUAL LISTOF LPAREN repeInt RPAREN
    (16) ListaConTipo -> valovar VARIABLE DOSPUNTOS . LIST MENORQUE STRING MAYORQUE IGUAL LISTOF LPAREN repeString RPAREN
    (17) ListaConTipo -> valovar VARIABLE DOSPUNTOS . LIST MENORQUE BOOLEAN MAYORQUE IGUAL LISTOF LPAREN RPAREN
    (11) variableConTipo -> valovar VARIABLE DOSPUNTOS . STRING IGUAL STRINGPALABRA
    (12) variableConTipo -> valovar VARIABLE DOSPUNTOS . INT IGUAL NUMBER
    (13) variableConTipo -> valovar VARIABLE DOSPUNTOS . BOOLEAN IGUAL
    (19) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS . SET MENORQUE INT MAYORQUE IGUAL SETOF LPAREN repeInt RPAREN
    (20) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS . SET MENORQUE STRING MAYORQUE IGUAL SETOF LPAREN repeString RPAREN
    (21) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS . SET MENORQUE BOOLEAN MAYORQUE IGUAL SETOF LPAREN RPAREN

    LIST            shift and go to state 25
    STRING          shift and go to state 27
    INT             shift and go to state 26
    BOOLEAN         shift and go to state 28
    SET             shift and go to state 29


state 18

    (26) datosprimitivos -> VARIABLE .

    $end            reduce using rule 26 (datosprimitivos -> VARIABLE .)
    COMA            reduce using rule 26 (datosprimitivos -> VARIABLE .)
    RPAREN          reduce using rule 26 (datosprimitivos -> VARIABLE .)


state 19

    (23) pair -> valovar VARIABLE IGUAL PAIR . LPAREN datosprimitivos COMA datosprimitivos RPAREN

    LPAREN          shift and go to state 30


state 20

    (14) variableSinTipo -> valovar VARIABLE IGUAL datosprimitivos .

    $end            reduce using rule 14 (variableSinTipo -> valovar VARIABLE IGUAL datosprimitivos .)


state 21

    (18) ListaSinTipo -> valovar VARIABLE IGUAL LISTOF . LPAREN repeCualquier RPAREN

    LPAREN          shift and go to state 31


state 22

    (22) ConjuntoSinTipo -> valovar VARIABLE IGUAL SETOF . LPAREN repeCualquier RPAREN

    LPAREN          shift and go to state 32


state 23

    (24) datosprimitivos -> NUMBER .

    $end            reduce using rule 24 (datosprimitivos -> NUMBER .)
    COMA            reduce using rule 24 (datosprimitivos -> NUMBER .)
    RPAREN          reduce using rule 24 (datosprimitivos -> NUMBER .)


state 24

    (25) datosprimitivos -> STRINGPALABRA .

    $end            reduce using rule 25 (datosprimitivos -> STRINGPALABRA .)
    COMA            reduce using rule 25 (datosprimitivos -> STRINGPALABRA .)
    RPAREN          reduce using rule 25 (datosprimitivos -> STRINGPALABRA .)


state 25

    (15) ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST . MENORQUE INT MAYORQUE IGUAL LISTOF LPAREN repeInt RPAREN
    (16) ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST . MENORQUE STRING MAYORQUE IGUAL LISTOF LPAREN repeString RPAREN
    (17) ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST . MENORQUE BOOLEAN MAYORQUE IGUAL LISTOF LPAREN RPAREN

    MENORQUE        shift and go to state 33


state 26

    (12) variableConTipo -> valovar VARIABLE DOSPUNTOS INT . IGUAL NUMBER

    IGUAL           shift and go to state 34


state 27

    (11) variableConTipo -> valovar VARIABLE DOSPUNTOS STRING . IGUAL STRINGPALABRA

    IGUAL           shift and go to state 35


state 28

    (13) variableConTipo -> valovar VARIABLE DOSPUNTOS BOOLEAN . IGUAL

    IGUAL           shift and go to state 36


state 29

    (19) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET . MENORQUE INT MAYORQUE IGUAL SETOF LPAREN repeInt RPAREN
    (20) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET . MENORQUE STRING MAYORQUE IGUAL SETOF LPAREN repeString RPAREN
    (21) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET . MENORQUE BOOLEAN MAYORQUE IGUAL SETOF LPAREN RPAREN

    MENORQUE        shift and go to state 37


state 30

    (23) pair -> valovar VARIABLE IGUAL PAIR LPAREN . datosprimitivos COMA datosprimitivos RPAREN
    (24) datosprimitivos -> . NUMBER
    (25) datosprimitivos -> . STRINGPALABRA
    (26) datosprimitivos -> . VARIABLE

    NUMBER          shift and go to state 23
    STRINGPALABRA   shift and go to state 24
    VARIABLE        shift and go to state 18

    datosprimitivos                shift and go to state 38

state 31

    (18) ListaSinTipo -> valovar VARIABLE IGUAL LISTOF LPAREN . repeCualquier RPAREN
    (37) repeCualquier -> . datosprimitivos
    (38) repeCualquier -> . datosprimitivos COMA repeCualquier
    (24) datosprimitivos -> . NUMBER
    (25) datosprimitivos -> . STRINGPALABRA
    (26) datosprimitivos -> . VARIABLE

    NUMBER          shift and go to state 23
    STRINGPALABRA   shift and go to state 24
    VARIABLE        shift and go to state 18

    repeCualquier                  shift and go to state 39
    datosprimitivos                shift and go to state 40

state 32

    (22) ConjuntoSinTipo -> valovar VARIABLE IGUAL SETOF LPAREN . repeCualquier RPAREN
    (37) repeCualquier -> . datosprimitivos
    (38) repeCualquier -> . datosprimitivos COMA repeCualquier
    (24) datosprimitivos -> . NUMBER
    (25) datosprimitivos -> . STRINGPALABRA
    (26) datosprimitivos -> . VARIABLE

    NUMBER          shift and go to state 23
    STRINGPALABRA   shift and go to state 24
    VARIABLE        shift and go to state 18

    repeCualquier                  shift and go to state 41
    datosprimitivos                shift and go to state 40

state 33

    (15) ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST MENORQUE . INT MAYORQUE IGUAL LISTOF LPAREN repeInt RPAREN
    (16) ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST MENORQUE . STRING MAYORQUE IGUAL LISTOF LPAREN repeString RPAREN
    (17) ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST MENORQUE . BOOLEAN MAYORQUE IGUAL LISTOF LPAREN RPAREN

    INT             shift and go to state 42
    STRING          shift and go to state 43
    BOOLEAN         shift and go to state 44


state 34

    (12) variableConTipo -> valovar VARIABLE DOSPUNTOS INT IGUAL . NUMBER

    NUMBER          shift and go to state 45


state 35

    (11) variableConTipo -> valovar VARIABLE DOSPUNTOS STRING IGUAL . STRINGPALABRA

    STRINGPALABRA   shift and go to state 46


state 36

    (13) variableConTipo -> valovar VARIABLE DOSPUNTOS BOOLEAN IGUAL .

    $end            reduce using rule 13 (variableConTipo -> valovar VARIABLE DOSPUNTOS BOOLEAN IGUAL .)


state 37

    (19) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET MENORQUE . INT MAYORQUE IGUAL SETOF LPAREN repeInt RPAREN
    (20) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET MENORQUE . STRING MAYORQUE IGUAL SETOF LPAREN repeString RPAREN
    (21) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET MENORQUE . BOOLEAN MAYORQUE IGUAL SETOF LPAREN RPAREN

    INT             shift and go to state 47
    STRING          shift and go to state 48
    BOOLEAN         shift and go to state 49


state 38

    (23) pair -> valovar VARIABLE IGUAL PAIR LPAREN datosprimitivos . COMA datosprimitivos RPAREN

    COMA            shift and go to state 50


state 39

    (18) ListaSinTipo -> valovar VARIABLE IGUAL LISTOF LPAREN repeCualquier . RPAREN

    RPAREN          shift and go to state 51


state 40

    (37) repeCualquier -> datosprimitivos .
    (38) repeCualquier -> datosprimitivos . COMA repeCualquier

    RPAREN          reduce using rule 37 (repeCualquier -> datosprimitivos .)
    COMA            shift and go to state 52


state 41

    (22) ConjuntoSinTipo -> valovar VARIABLE IGUAL SETOF LPAREN repeCualquier . RPAREN

    RPAREN          shift and go to state 53


state 42

    (15) ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST MENORQUE INT . MAYORQUE IGUAL LISTOF LPAREN repeInt RPAREN

    MAYORQUE        shift and go to state 54


state 43

    (16) ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST MENORQUE STRING . MAYORQUE IGUAL LISTOF LPAREN repeString RPAREN

    MAYORQUE        shift and go to state 55


state 44

    (17) ListaConTipo -> valovar VARIABLE DOSPUNTOS LIST MENORQUE BOOLEAN . MAYORQUE IGUAL LISTOF LPAREN RPAREN

    MAYORQUE        shift and go to state 56


state 45

    (12) variableConTipo -> valovar VARIABLE DOSPUNTOS INT IGUAL NUMBER .

    $end            reduce using rule 12 (variableConTipo -> valovar VARIABLE DOSPUNTOS INT IGUAL NUMBER .)


state 46

    (11) variableConTipo -> valovar VARIABLE DOSPUNTOS STRING IGUAL STRINGPALABRA .

    $end            reduce using rule 11 (variableConTipo -> valovar VARIABLE DOSPUNTOS STRING IGUAL STRINGPALABRA .)


state 47

    (19) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET MENORQUE INT . MAYORQUE IGUAL SETOF LPAREN repeInt RPAREN

    MAYORQUE        shift and go to state 57


state 48

    (20) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET MENORQUE STRING . MAYORQUE IGUAL SETOF LPAREN repeString RPAREN

    MAYORQUE        shift and go to state 58


state 49

    (21) ConjuntoConTipo -> valovar VARIABLE DOSPUNTOS SET MENORQUE BOOLEAN . MAYORQUE IGUAL SETOF LPAREN RPAREN

    MAYORQUE        shift and go to state 59


state 50

    (23) pair -> valovar VARIABLE IGUAL PAIR LPAREN datosprimitivos COMA . datosprimitivos RPAREN
    (24) datosprimitivos -> . NUMBER
    (25) datosprimitivos -> . STRINGPALABRA
    (26) datosprimitivos -> . VARIABLE
